--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,18 +4,22 @@
   background-color: var(--hero-footer-bg-color);
   text-align: center;
 }
-// .overlay {
-//   max-width: 1600px;
-//   height: 600px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   background-image: linear-gradient(
-//       to right,
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/hero.jpg);
-// }
+
+.hero__content {
+  padding: 118px 198px;
+  text-align: center;
+}
+
+.hero__text {
+  color: var(--main-white-color);
+  letter-spacing: 0.06em;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.6;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
 
 .hero__button {
   min-width: 200px;
@@ -57,5 +61,3 @@
 //   text-align: center;
 //   margin-bottom: 30px;
 // }
-
-
