--- a/css/main.css
+++ b/css/main.css
@@ -79,27 +79,11 @@ address {
 }
 
 .container {
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-}
-
-@media screen and (min-width: 480px) {
-  .container {
-    min-width: 480px;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    min-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    min-width: 1200px;
-  }
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Стили логотипа */
@@ -589,6 +573,30 @@ a {
 .hero {
   background-color: var(--hero-footer-bg-color);
   text-align: center;
+}
+
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+}
+
+.hero__content {
+  padding: 200px 0;
+  text-align: center;
+}
+
+.hero__text {
+  color: var(--main-white-color);
+  letter-spacing: 0.06em;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .hero__button {
