--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,21 +1,30 @@
 /* Основные стили контента страницы */
-
 .hero {
   background-color: var(--hero-footer-bg-color);
   text-align: center;
 }
-
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero.jpg);
+}
 .hero__content {
-  padding: 118px 198px;
+  padding: 200px 0;
   text-align: center;
 }
-
 .hero__text {
   color: var(--main-white-color);
   letter-spacing: 0.06em;
   font-weight: 900;
-  font-size: 26px;
-  line-height: 1.6;
+  font-size: 44px;
+  line-height: 1.4;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
@@ -35,29 +44,3 @@
   color: var(--main-white-color);
   cursor: pointer;
 }
-// .overlay {
-//   max-width: 1600px;
-//   height: 600px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   background-image: linear-gradient(
-//       to right,
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/hero.jpg);
-// }
-// .hero__content {
-//   padding: 200px 0;
-//   text-align: center;
-// }
-// .hero__text {
-//   color: var(--main-white-color);
-//   letter-spacing: 0.06em;
-//   font-weight: 900;
-//   font-size: 44px;
-//   line-height: 1.4;
-//   text-transform: uppercase;
-//   text-align: center;
-//   margin-bottom: 30px;
-// }
