--- a/css/main.css
+++ b/css/main.css
@@ -592,8 +592,7 @@ a {
 }
 
 .hero__content {
-  padding-top: 118px;
-  padding-bottom: 198px;
+  padding: 118px 0;
   text-align: center;
 }
 
@@ -624,7 +623,7 @@ a {
 
 .overlay {
   min-height: 400px;
-  background-image: url(../../images/mobile/bg-main.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/mobile/bg-main.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -632,19 +631,19 @@ a {
 
 @media (min-device-pixel-ratio: 2) and (min-width: 320px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px), (min-resolution: 192dpi) and (min-width: 320px), (min-resolution: 2dppx) and (min-width: 320px) {
   .overlay {
-    background-image: url(../../images/mobile/bg-main@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/mobile/bg-main@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .overlay {
-    background-image: url(../../images/tablet/bg-main.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/tablet/bg-main.jpg);
   }
 }
 
 @media (min-device-pixel-ratio: 2) and (min-width: 768px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
   .overlay {
-    background-image: url(../../images/tablet/bg-main@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/tablet/bg-main@2x.jpg);
   }
 }
 
@@ -658,17 +657,68 @@ a {
   }
   .overlay {
     min-height: 600px;
-    background-image: url(../../images/deckstope/bg-main.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/deckstope/bg-main.jpg);
   }
 }
 
 @media (min-device-pixel-ratio: 2) and (min-width: 1200px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 1200px) {
   .overlay {
-    background-image: url(../../images/deckstope/bg-main@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/deckstope/bg-main@2x.jpg);
   }
 }
 
 /* Стили для секции преимуществ компании */
+.advantages-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.advantages {
+  display: flex;
+  justify-content: space-between;
+}
+
+.advantages .atention::before {
+  background-image: url(../images/svg-images/antenna.svg);
+}
+
+.advantages .punctuality::before {
+  background-image: url(../images/svg-images/clock.svg);
+}
+
+.advantages .planing::before {
+  background-image: url(../images/svg-images/diagram.svg);
+}
+
+.advantages .technologies::before {
+  background-image: url(../images/svg-images/astronaut.svg);
+}
+
+.advantages__title {
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.advantages__text {
+  width: 270px;
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--secondary-text-color);
+}
+
+.advantage::before {
+  height: 120px;
+  background-color: var(--secondary-bg-color);
+  content: "";
+  display: block;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-size: 30%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /* Стили для секции услуг компании */
 .company-services {
   padding-bottom: 94px;
