--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,8 +6,7 @@
 }
 
 .hero__content {
-  padding-top: 118px;
-  padding-bottom: 198px;
+  padding: 118px 0;
   text-align: center;
 }
 
@@ -38,7 +37,12 @@
 // mobile
 .overlay {
   min-height: 400px;
-  background-image: url(../../images/mobile/bg-main.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../../images/mobile/bg-main.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -49,14 +53,24 @@
   (min-resolution: 192dpi) and (min-width: 320px),
   (min-resolution: 2dppx) and (min-width: 320px) {
   .overlay {
-    background-image: url(../../images/mobile/bg-main@2x.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/mobile/bg-main@2x.jpg);
   }
 }
 
 // tablet
 @media screen and (min-width: 768px) {
   .overlay {
-    background-image: url(../../images/tablet/bg-main.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/tablet/bg-main.jpg);
   }
 }
 @media (min-device-pixel-ratio: 2) and (min-width: 768px),
@@ -64,7 +78,12 @@
   (min-resolution: 192dpi) and (min-width: 768px),
   (min-resolution: 2dppx) and (min-width: 768px) {
   .overlay {
-    background-image: url(../../images/tablet/bg-main@2x.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/tablet/bg-main@2x.jpg);
   }
 }
 // desctope
@@ -80,7 +99,12 @@
 
   .overlay {
     min-height: 600px;
-    background-image: url(../../images/deckstope/bg-main.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/deckstope/bg-main.jpg);
   }
 }
 @media (min-device-pixel-ratio: 2) and (min-width: 1200px),
@@ -88,6 +112,11 @@
   (min-resolution: 192dpi) and (min-width: 1200px),
   (min-resolution: 2dppx) and (min-width: 1200px) {
   .overlay {
-    background-image: url(../../images/deckstope/bg-main@2x.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/deckstope/bg-main@2x.jpg);
   }
 }
