--- a/css/main.css
+++ b/css/main.css
@@ -592,7 +592,7 @@ a {
 }
 
 .hero__content {
-  padding: 118px 0;
+  padding: 118px 0px;
   text-align: center;
 }
 
@@ -669,13 +669,32 @@ a {
 
 /* Стили для секции преимуществ компании */
 .advantages-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.advantages__title {
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.advantages__title:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.advantages__title:not(:first-child) {
+  margin-top: 30px;
+}
+
+.advantages__text {
+  width: 450px;
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--secondary-text-color);
 }
 
 .advantages {
-  display: flex;
-  justify-content: space-between;
+  display: block;
 }
 
 .advantages .atention::before {
@@ -692,31 +711,6 @@ a {
 
 .advantages .technologies::before {
   background-image: url(../images/svg-images/astronaut.svg);
-}
-
-.advantages__title {
-  font-size: 14px;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.advantages__text {
-  width: 270px;
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--secondary-text-color);
-}
-
-.advantage::before {
-  height: 120px;
-  background-color: var(--secondary-bg-color);
-  content: "";
-  display: block;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  background-size: 30%;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 /* Стили для секции услуг компании */
