--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -7,28 +7,24 @@
 .advantages__title {
   font-size: 14px;
   text-transform: uppercase;
-  &:not(:last-child) {
-    margin-bottom: 10px;
-  }
-  &:not(:first-child) {
-    margin-top: 30px;
-  }
+  margin-bottom: 10px;
 }
 
 .advantages__text {
-  width: 450px;
   font-size: 14px;
   line-height: 1.7;
   color: var(--secondary-text-color);
+  margin-bottom: 30px;
 }
-
+.advantage {
+  background-size: contain;
+}
 .advantages {
   display: block;
 
   & .atention::before {
     background-image: url(../images/svg-images/antenna.svg);
   }
-
   & .punctuality::before {
     background-image: url(../images/svg-images/clock.svg);
   }
@@ -39,62 +35,52 @@
     background-image: url(../images/svg-images/astronaut.svg);
   }
 }
-// .advantage::before {
-//   height: 120px;
-//   background-color: var(--secondary-bg-color);
-//   content: "";
-//   display: block;
-//   margin-bottom: 30px;
-//   border-radius: 4px;
-//   background-size: 30%;
-//   background-repeat: no-repeat;
-//   background-position: center;
-// }
+.advantage::before {
+  height: 120px;
+  background-color: var(--secondary-bg-color);
+  content: "";
+  display: block;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-// .advantages-section {
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-// }
-// .advantages {
-//   display: flex;
-//   justify-content: space-between;
+// tablet
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 
-//   & .atention::before {
-//     background-image: url(../images/svg-images/antenna.svg);
-//   }
+  .advantage {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 60px) / 2);
+  }
 
-//   & .punctuality::before {
-//     background-image: url(../images/svg-images/clock.svg);
-//   }
-//   & .planing::before {
-//     background-image: url(../images/svg-images/diagram.svg);
-//   }
-//   & .technologies::before {
-//     background-image: url(../images/svg-images/astronaut.svg);
-//   }
-// }
+  .advantages__text {
+    margin-bottom: 0;
+  }
+}
 
-// .advantages__title {
-//   font-size: 14px;
-//   text-transform: uppercase;
-//   margin-bottom: 10px;
-// }
+// desktop
+@media screen and (min-width: 1200px) {
+  .advantages-section {
+    padding: 94px 15px;
+  }
 
-// .advantages__text {
-//   width: 270px;
-//   font-size: 14px;
-//   line-height: 1.7;
-//   color: var(--secondary-text-color);
-// }
+  .advantages {
+    display: flex;
+    justify-content: space-between;
+  }
+  .advantages__text {
+    width: 270px;
+  }
 
-// .advantage::before {
-//   height: 120px;
-//   background-color: var(--secondary-bg-color);
-//   content: "";
-//   display: block;
-//   margin-bottom: 30px;
-//   border-radius: 4px;
-//   background-size: 30%;
-//   background-repeat: no-repeat;
-//   background-position: center;
-// }
+  .advantage::before {
+    background-size: 30%;
+  }
+}
