--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -86,7 +86,7 @@
       url(../images/tablet/bg-main@2x.jpg);
   }
 }
-// desctope
+// desktop
 @media screen and (min-width: 1200px) {
   .hero__content {
     padding: 200px 0;
