--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,9 @@ address {
 
 @media screen and (min-width: 1200px) {
   .container {
-    min-width: 1200px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -676,21 +678,18 @@ a {
 .advantages__title {
   font-size: 14px;
   text-transform: uppercase;
-}
-
-.advantages__title:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.advantages__title:not(:first-child) {
-  margin-top: 30px;
-}
-
 .advantages__text {
-  width: 450px;
   font-size: 14px;
   line-height: 1.7;
   color: var(--secondary-text-color);
+  margin-bottom: 30px;
+}
+
+.advantage {
+  background-size: contain;
 }
 
 .advantages {
@@ -711,6 +710,50 @@ a {
 
 .advantages .technologies::before {
   background-image: url(../images/svg-images/astronaut.svg);
+}
+
+.advantage::before {
+  height: 120px;
+  background-color: var(--secondary-bg-color);
+  content: "";
+  display: block;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .advantage {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 60px) / 2);
+  }
+  .advantages__text {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-section {
+    padding: 94px 15px;
+  }
+  .advantages {
+    display: flex;
+    justify-content: space-between;
+  }
+  .advantages__text {
+    width: 270px;
+  }
+  .advantage::before {
+    background-size: 30%;
+  }
 }
 
 /* Стили для секции услуг компании */
