--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -18,6 +18,8 @@
 
 @media screen and (min-width: 1200px) {
   .container {
-    min-width: 1200px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
