--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -104,7 +104,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/deckstope/bg-main.jpg);
+      url(../images/desktop/bg-main.jpg);
   }
 }
 @media (min-device-pixel-ratio: 2) and (min-width: 1200px),
@@ -117,6 +117,6 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/deckstope/bg-main@2x.jpg);
+      url(../images/desktop/bg-main@2x.jpg);
   }
 }
