--- a/css/main.css
+++ b/css/main.css
@@ -659,13 +659,13 @@ a {
   }
   .overlay {
     min-height: 600px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/deckstope/bg-main.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/bg-main.jpg);
   }
 }
 
 @media (min-device-pixel-ratio: 2) and (min-width: 1200px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 1200px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/deckstope/bg-main@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/bg-main@2x.jpg);
   }
 }
 
@@ -757,41 +757,45 @@ a {
 }
 
 /* Стили для секции услуг компании */
-.company-services {
-  padding-bottom: 94px;
+@media screen and (max-width: 1199px) {
+  .company-services {
+    display: none;
+  }
 }
 
-.company-services__head {
-  font-size: 36px;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.company-competence {
-  display: flex;
-  justify-content: space-between;
-}
-
-.company-competence__tumb {
-  position: relative;
-}
-
-.company-competence__attachment {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  padding: 27px;
-  margin: 0;
-  width: 370px;
-  height: 70px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  color: var(--main-white-color);
-  text-transform: uppercase;
-  background-color: var(--attachment-bg-color);
+@media screen and (min-width: 1200px) {
+  .company-services {
+    padding-bottom: 94px;
+  }
+  .company-services__head {
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .company-competence {
+    display: flex;
+    justify-content: space-between;
+  }
+  .company-competence__tumb {
+    position: relative;
+  }
+  .company-competence__attachment {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 27px;
+    margin: 0;
+    width: 370px;
+    height: 70px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    color: var(--main-white-color);
+    text-transform: uppercase;
+    background-color: var(--attachment-bg-color);
+  }
 }
 
 /* Стили секции команда */
