--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -1,31 +1,30 @@
 /* Стили секции команда */
 
 .team-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--secondary-bg-color);
 }
 .team-section__head {
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.2;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
-/* Карточки страницы - студия */
+
 .team-cards {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  display: block;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-position: center;
 }
 .team-cards__list-item {
-  flex-basis: calc(100% - var(--card-set-gap)) / 4;
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
   padding: 0px;
   background-color: var(--main-white-color);
   border: var(--border-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: var(--box-shadow);
+  margin-bottom: 30px;
 }
 .team-cards__card {
   padding-top: 30px;
@@ -41,4 +40,46 @@
   color: var(--secondary-text-color);
   text-align: center;
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-cards {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .team-cards__list-item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .team-section__head {
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .team-cards {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: calc(-1 * var(--card-set-gap));
+    margin-top: calc(-1 * var(--card-set-gap));
+  }
+  .team-cards__list-item {
+    flex-basis: calc(100% - var(--card-set-gap)) / 4;
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);
+    padding: 0px;
+    background-color: var(--main-white-color);
+    border: var(--border-color);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: var(--box-shadow);
+  }
 }
