--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -8,6 +8,9 @@
   font-size: 14px;
   text-transform: uppercase;
   margin-bottom: 10px;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .advantages__text {
