--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,21 +5,19 @@
 
 @media screen and (min-width: 480px) {
   .container {
-    min-width: 480px;
+    max-width: 480px;
     margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    min-width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 1200px;
   }
 }
