--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -1,25 +1,30 @@
 /* Стили секции Наши клиенты */
 
 .clients-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  display: block;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-
 .clients-section__title {
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.2;
   text-align: center;
-  margin-bottom: 50px;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
 }
-
 .clients-section-list {
   display: flex;
+  flex-wrap: wrap;
+  margin-top: -15px;
+  margin-left: -15px;
 }
 .clients-section-list__client {
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--icon-bg-color);
   border-radius: 4px;
+  margin-left: 15px;
+  margin-top: 15px;
+  flex-basis: calc((100% - 30px) / 2);
 
   display: flex;
   justify-content: center;
@@ -27,28 +32,76 @@
   cursor: pointer;
 
   fill: var(--icon-bg-color);
-
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
-
-  &:hover,
-  &:focus {
-    border: 1px solid var(--extra-blue-color);
-  }
 }
 
 .clients-section-list__icon {
   width: 106px;
   height: 60px;
   fill: var(--icon-bg-color);
+}
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .clients-section__title {
+    font-size: 28px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+  }
 
-  .clients-section-list__client:hover &,
-  .clients-section-list__clientt:focus & {
-    fill: var(--extra-blue-color);
+  .clients-section-list__client {
+    width: 226px;
+    height: 92px;
+    border: 1px solid var(--icon-bg-color);
+    border-radius: 4px;
+
+    flex-basis: calc((100% - 60px) / 3);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    fill: var(--icon-bg-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    display: block;
+  }
+
+  .clients-section__title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+  .clients-section-list {
+    flex-wrap: nowrap;
+  }
+  .clients-section-list__client {
+    width: 170px;
+    height: 92px;
+    cursor: pointer;
+
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &:hover,
+    &:focus {
+      border: 1px solid var(--extra-blue-color);
+    }
+  }
+
+  .clients-section-list__icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .clients-section-list__client:hover &,
+    .clients-section-list__clientt:focus & {
+      fill: var(--extra-blue-color);
+    }
   }
 }
