--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -67,8 +67,7 @@
 
 @media screen and (min-width: 1200px) {
   .clients-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding: 94px 15px;
     display: block;
   }
 
