--- a/css/main.css
+++ b/css/main.css
@@ -246,13 +246,12 @@ a {
 /* соц-сети футера */
 .footer-list {
   display: block;
-  margin-left: 70px;
   list-style: none;
 }
 
 .footer-list__title {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -261,8 +260,9 @@ a {
 }
 
 .footer-network {
-  display: flex;
+  display: inline-flex;
   margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 .footer-network__list-item:not(:last-child) {
@@ -278,11 +278,6 @@ a {
   align-items: center;
   cursor: pointer;
   background-color: var(--icon-bgc-footer);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-network__item:hover, .footer-network__item:focus {
-  background-color: var(--extra-blue-color);
 }
 
 .footer-network__icon {
@@ -296,9 +291,32 @@ a {
   fill: var(--main-white-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-list {
+    margin-left: 70px;
+  }
+  .footer-network {
+    display: flex;
+    margin-bottom: unset;
+  }
+  .footer-network__item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-network__item:hover, .footer-network__item:focus {
+    background-color: var(--extra-blue-color);
+  }
+}
+
 /* Форма футера */
 .footer-form {
-  margin-left: 93px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    margin-left: 93px;
+  }
 }
 
 .footer-form__title {
@@ -308,30 +326,44 @@ a {
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 20px;
-  display: flex;
-  justify-content: baseline;
 }
 
-.footer-form__position {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .footer-form__title {
+    display: flex;
+    justify-content: baseline;
+  }
 }
 
 .footer-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: var(--hero-footer-bg-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
-  padding-left: 16px;
-  outline: none;
   color: var(--main-white-color);
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__position {
+    display: flex;
+  }
+  .footer-form__input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 16px;
+    outline: none;
+    margin-bottom: 0px;
+  }
 }
 
 .footer-form__button {
   position: relative;
+  display: inline-block;
   width: 200px;
   height: 50px;
   color: var(--main-white-color);
@@ -341,12 +373,10 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding: 10px 62px 10px 29px;
-  cursor: pointer;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  cursor: pointer;
 }
 
 .footer-form__button::after {
@@ -357,6 +387,13 @@ a {
   position: absolute;
   top: 13px;
   right: 28px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__button {
+    display: block;
+    cursor: pointer;
+  }
 }
 
 /* модальное окно */
@@ -957,8 +994,7 @@ a {
 
 @media screen and (min-width: 1200px) {
   .clients-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding: 94px 15px;
     display: block;
   }
   .clients-section__title {
@@ -998,7 +1034,9 @@ a {
 
 .footer__section {
   display: flex;
-  align-items: baseline;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
 }
 
 .logo__footer-color {
@@ -1013,20 +1051,38 @@ a {
   font-size: 14px;
   line-height: 1.7;
   color: var(--main-white-color);
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
-.footer__item:not(:last-child) {
-  margin-bottom: 9px;
+.footer__address-section {
+  margin-bottom: 60px;
 }
 
 .footer__link {
   font-size: 14px;
+  line-height: 1.7;
+  margin-bottom: 60px;
   color: var(--footer-link-color);
 }
 
-.footer__link:hover, .footer__link:focus {
-  color: var(--extra-blue-color);
+@media screen and (min-width: 768px) {
+  .footer__section {
+    flex-direction: unset;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
+  .footer__link {
+    font-size: 14px;
+    color: var(--footer-link-color);
+  }
+  .footer__link:hover, .footer__link:focus {
+    color: var(--extra-blue-color);
+  }
 }
 
 .buttons-list {
