--- a/sass/components/_footer-form-btn.scss
+++ b/sass/components/_footer-form-btn.scss
@@ -1,5 +1,6 @@
 .footer-form__button {
   position: relative;
+  display: inline-block;
 
   width: 200px;
   height: 50px;
@@ -10,13 +11,11 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding: 10px 62px 10px 29px;
-  cursor: pointer;
 
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  cursor: pointer;
 
   &::after {
     content: "";
@@ -27,5 +26,10 @@
     position: absolute;
     top: 13px;
     right: 28px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+    cursor: pointer;
   }
 }
