--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,6 +1,12 @@
 /* Форма футера */
+
 .footer-form {
-  margin-left: 93px;
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 
 .footer-form__title {
@@ -10,22 +16,35 @@
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 20px;
-  display: flex;
-  justify-content: baseline;
-}
-.footer-form__position {
-  display: flex;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: baseline;
+  }
 }
 .footer-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: var(--hero-footer-bg-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
-  padding-left: 16px;
-  outline: none;
   color: var(--main-white-color);
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__position {
+    display: flex;
+  }
+
+  .footer-form__input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 16px;
+    outline: none;
+    margin-bottom: 0px;
+  }
 }
