--- a/sass/components/_footer-network.scss
+++ b/sass/components/_footer-network.scss
@@ -1,13 +1,12 @@
 /* соц-сети футера */
 .footer-list {
   display: block;
-  margin-left: 70px;
   list-style: none;
 }
 
 .footer-list__title {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -16,14 +15,14 @@
 }
 
 .footer-network {
-  display: flex;
+  display: inline-flex;
   margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 .footer-network__list-item:not(:last-child) {
   margin-right: 10px;
 }
-
 .footer-network__item {
   width: 44px;
   height: 44px;
@@ -34,13 +33,6 @@
   align-items: center;
   cursor: pointer;
   background-color: var(--icon-bgc-footer);
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    background-color: var(--extra-blue-color);
-  }
 }
 
 .footer-network__icon {
@@ -53,4 +45,24 @@
   justify-content: center;
   align-items: center;
   fill: var(--main-white-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-list {
+    margin-left: 70px;
+  }
+
+  .footer-network {
+    display: flex;
+    margin-bottom: unset;
+  }
+
+  .footer-network__item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      background-color: var(--extra-blue-color);
+    }
+  }
 }
