--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 // COMPONENTS
 @import "./components/logo";
 @import "./components/site-nav";
+@import "./components/header-address";
 @import "./components/team-network";
 @import "./components/footer-network";
 @import "./components/footer-form";
