--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,5 +1,8 @@
 /* Стили навигации */
-
+.site-nav {
+  display: flex;
+  align-items: center;
+}
 .site-nav__link {
   display: block;
   padding-top: 32px;
@@ -36,50 +39,6 @@
 .site-nav__item + .site-nav__item {
   margin-left: 50px;
 }
-.header-address__item {
-  min-width: 135px;
-  min-height: 16px;
-  justify-content: center;
-  align-content: center;
-
-  & + & {
-    margin-left: 50px;
-  }
-}
-
-.header-address__link {
-  display: flex;
-  align-items: center;
-
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: var(--extra-blue-color);
-
-    .header-address__icon,
-    .header-address__icon {
-      fill: var(--extra-blue-color);
-      cursor: pointer;
-    }
-  }
-}
-.header-address__icon {
-  padding: 0;
-  margin-right: 10px;
-
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
-
-  fill: var(--secondary-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 a {
   position: relative;
 }
