--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,20 +1,32 @@
 /* Шапка страницы */
+
+@media screen and (max-width: 767px) {
+  .header {
+    display: none;
+  }
+}
+
+.header__main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header {
   background-color: var(--main-white-color);
   border: 1px solid var(--border-color);
 }
-.header__logo {
-  margin-right: 93px;
-}
-.header-address {
-  margin-left: auto;
-}
 .logo__header-color {
   color: var(--main-black-color);
 }
-.header__main,
-.site-nav,
-.header-address {
-  display: flex;
-  align-items: center;
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 93px;
+  }
 }
