--- a/sass/components/_header-address.scss
+++ b/sass/components/_header-address.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 767px) {
+  .header-address {
+    display: none;
+  }
+}
+
 .header-address {
   margin-left: auto;
   align-items: center;
