--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,5 @@
 /* Шапка страницы */
 
-@media screen and (max-width: 767px) {
-  .header {
-    display: none;
-  }
-}
-
 .header__main {
   display: flex;
   align-items: center;
@@ -18,6 +12,48 @@
 }
 .logo__header-color {
   color: var(--main-black-color);
+}
+.burger-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+
+  &__icon {
+    width: 40px;
+    height: 40px;
+    fill: #212121;
+  }
+}
+.mobile-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vh;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 100;
+}
+
+.close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+
+  &__icon {
+    width: 40px;
+    height: 40px;
+    fill: #212121;
+  }
+}
+.mobile-menu__container {
+  position: relative;
+}
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 @media screen and (min-width: 768px) {
