--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,11 @@
   background-color: var(--main-white-color);
   border: 1px solid var(--border-color);
 }
+
+.header__logo {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 .logo__header-color {
   color: var(--main-black-color);
 }
@@ -33,8 +38,12 @@
   height: 100vh;
   background-color: #fff;
   z-index: 100;
-}
 
+  transform: translateX(100%);
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
 .close-btn {
   background-color: transparent;
   border: none;
@@ -45,13 +54,16 @@
     width: 40px;
     height: 40px;
     fill: #212121;
+    &:hover,
+    &:focus {
+      color: var(--extra-blue-color);
+    }
   }
 }
 .mobile-menu__container {
   position: relative;
   min-height: 200px;
-  padding-top: 48px;
-  padding-left: 40px;
+  padding: 48px 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -62,6 +74,45 @@
   top: 10px;
   right: 15px;
 }
+
+.mobile-nav__item {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+
+  &:not(:last-child) {
+    padding-bottom: 32px;
+  }
+}
+.mobile-nav__link {
+  color: var(--main-black-color);
+}
+.mobole-nav__active {
+  color: var(--extra-blue-color);
+}
+
+.mobile-address {
+  &__numb {
+    padding-bottom: 32px;
+  }
+
+  &__numb-link {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--extra-blue-color);
+  }
+}
+.mobile-address__mail-link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+
+  color: var(--secondary-text-color);
+}
 .mobile-network {
   display: flex;
   &__item:not(:last-child) {
@@ -70,6 +121,14 @@
   }
   &__item:not(:first-child) {
     padding-left: 10px;
+  }
+  &__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+
+    color: #2196f3;
   }
 }
 
