--- a/css/main.css
+++ b/css/main.css
@@ -425,8 +425,8 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 528px;
-  min-height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--main-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -449,6 +449,10 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+}
+
+.close-modal:hover, .close-modal:focus {
+  color: var(--extra-blue-color);
 }
 
 .modal-form-title {
@@ -547,7 +551,7 @@ a {
 }
 
 .form-check-policy {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71px;
   margin-bottom: 30px;
   margin: 0 auto;
@@ -577,6 +581,13 @@ a {
 
 .form-check-policy a {
   color: var(--extra-blue-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .form-button {
