--- a/sass/components/_team-network.scss
+++ b/sass/components/_team-network.scss
@@ -17,8 +17,8 @@
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .team-network__item-list:hover &,
-  .team-network__item-list:focus & {
+  &:hover,
+  &:focus {
     background-color: var(--extra-blue-color);
   }
 }
